<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="45dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="45dp">

        <TextView
            android:id="@+id/fieldResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|end"
            android:textSize="72sp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/lblResult"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textColor="#FF0000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:layout_editor_absoluteX="45dp" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="45dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblHeight"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/height"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputHeight"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="@string/height_hint"
                android:hint="@string/height_hint"
                android:inputType="numberDecimal" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/lblWeight"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/weight"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/inputWeight"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints="@string/weight_hint"
                android:hint="@string/weight_hint"
                android:inputType="numberDecimal" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:onClick="calc"
        android:text="@string/calc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>